<resources>
    <string name="app_name">UARKRegisterApp</string>
    <string name="button_ok">OK</string>
    <string name="homepage_button_logout">Logout</string>
    <string name="homepage_button_start_transaction">Start Transaction</string>
    <string name="homepage_button_create_employee">Create Employee</string>
    <string name="homepage_button_report_product">Sales Report: Product</string>
    <string name="homepage_button_report_cashier">Sales Report: Cashier</string>
    <string name="homepage_alert_dialog_unimplemented_title">Functionality not available</string>
    <string name="homepage_alert_dialog_unimplemented_subtitle">Functionality has not yet been implemented</string>
    <string name="homepage_welcome_text_start">Welcome</string>
    <string name="homepage_welcome_text_end">! What would you like to do?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_create_product">Create Product</string>
    <string name="button_home_page">View Home Page</string>
    <string name="text_view_landing_welcome">UARK Register App</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_product_save">Saving Product...</string>
    <string name="alert_dialog_product_delete">Deleting Product...</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_login">Welcome! Please log in.</string>

    <!-- Strings related to login -->
    <string name="prompt_employee_id">Employee ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_employee_id">This Employee ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_error">Login Failed</string>
    <string name="login_loading">Loading...</string>
    <string name="employee_check">Checking for employees...</string>
    <string name="employee_check_error">Failed to get employee count</string>
    <string name="alert_dialog_employee_loading">Creating new employee...</string>
    <string name="alert_dialog_employee_load_success">Create employee!</string>
    <string name="alert_dialog_employee_load_failure">Failed to load employees.</string>
    <string name="title_activity_create_employee_view">Create Employee</string>

    <!-- String related to transactions -->
    <string name="transaction_error">Uh oh, we failed to create new transaction</string>
    <string name="transaction_loading">Creating new transaction...</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_confirm">Checkout</string>
    <string name="transaction_done">Done</string>
    <string name="title_activity_transaction_acitivty">Create Transaction</string>
    <string name="button_activity_transaction_review">Review Order</string>
    <string name="product_list_item_lookupCode">Lookup Code:</string>
    <string name="product_list_item_price">Price:</string>
    <string name="product_list_item_increment">+</string>
    <string name="product_list_item_decrement">-</string>
    <string name="get_products_alert">Uh oh, we failed to fetch products</string>
    <string name="loading_products">Loading products...</string>

</resources>
