<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp">

    <Button
        android:id="@+id/list_view_decrement_button"
        android:layout_width="37dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:text="@string/product_list_item_decrement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_list_item_lookupCode"
        app:layout_constraintStart_toEndOf="@+id/list_view_decrement_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="38dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/product_list_item_price"
        app:layout_constraintStart_toEndOf="@+id/list_view_decrement_button"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/list_view_increment_button"
        android:layout_width="38dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:text="@string/product_list_item_increment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_view_item_quantity"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/list_view_increment_button"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toEndOf="@+id/list_view_decrement_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_view_item_product_lookup_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="  "
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_view_item_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="  "
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/list_view_item_product_lookup_code" />

</android.support.constraint.ConstraintLayout>